syntax = "proto3";

import "besched/proto/besched.proto";

option go_package = "sigmaos/lcsched/proto";

service LCSched {
  rpc Enqueue(EnqueueRequest) returns (EnqueueResponse);
  rpc RegisterSchedd(RegisterScheddRequest) returns (RegisterScheddResponse);
}

message RegisterScheddRequest {
  string kernelID = 1;
  uint32 mcpuInt = 2;
  uint32 memInt = 3;
}

message RegisterScheddResponse {
}
