syntax = "proto3";

import "proc/proc.proto";

option go_package = "sigmaos/procqsrv/proto";

service ProcQ {
  rpc Enqueue(EnqueueRequest) returns (EnqueueResponse);
  rpc GetProc(GetProcRequest) returns (GetProcResponse);
  rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
}

message EnqueueRequest {
  ProcProto procProto = 1;
}

message EnqueueResponse {
  string scheddID = 1;
  uint64 procSeqno = 2;
}

message GetProcRequest {
  string kernelID = 1;
  uint32 mem = 2;
  uint64 nextProcSeqno = 3;
}

message GetProcResponse {
  bool oK = 1;
  uint32 mem = 2;
  uint32 qLen = 3;
  ProcProto procProto = 4;
  string procqID = 5;
}

message GetStatsRequest {
}

message GetStatsResponse {
  map<string, int64> nqueued = 1;
}
